--- a/style.css
+++ b/style.css
@@ -25,8 +25,14 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	overflow: hidden;
+	overflow-x: hidden;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
 }
+::-webkit-scrollbar {
+	display: none; /* for Chrome, Safari, and Opera */
+}
+
 ol, ul {
 	list-style: none;
 }
